--- a/src/locales/cn/ui.json
+++ b/src/locales/cn/ui.json
@@ -3,19 +3,15 @@
   "Create New Game": "新建游戏",
   "№ of Players": "玩家人数",
   "Solo": "单人模式",
-  "Expansions": "扩展",
   "Options": "选项",
-  "Promo": "促销卡牌",
-  "Promos": "Promo卡牌",
   "Starting Corporations": "起始公司",
-  "Starting Preludes": "初始前序卡",
-  "Starting CEOs": "初始CEO卡",
+  "Starting Preludes": "起始前序卡",
+  "Starting CEOs": "起始CEO卡",
   "Corporations": "公司",
-  "Create Game": "建立游戏",
-  "Color:": "颜色：",
+  "Create Game": "创建游戏",
   "Your name": "你的名字",
-  "Board": "版图",
   "Beginner?": "使用新手公司?",
+  "Color:": "颜色：",
   "Red": "红色",
   "Green": "绿色",
   "Yellow": "黄色",
@@ -29,14 +25,6 @@
   "Claimed ": "已声明 ",
   "greenery": "森林",
   "city": "城市",
-
-  "tharsis": "基础版图",
-  "hellas": "Hellas版图",
-  "elysium": "Elysium版图",
-  "t. cimmeria": "辛梅里亚版图",
-  "random official": "随机官方地图",
-  "random all": "全部随机",
-
   "GEN": "时代",
   "Gen: ": "时代：",
   "Venus scale": "金星改造度等级",
@@ -53,17 +41,55 @@
   "Information panel": "信息面板",
   "press to show or hide the description": "点击显示/隐藏描述",
 
+  "Expansions": "扩展",
+  "Corporate Era": "公司时代",
   "prel": "前序",
   "Prelude": "前序",
   "Prelude 2": "前序2",
   "Prelude 2(β)": "前序2(测试版)",
   "Venus Next": "金星",
-  "Underworld": "地下世界",
-  "Star Wars (β)": "星球大战(测试版)",
+  "Alt. Venus Board": "替代金星版图",
+  "Mandatory Venus Terraforming": "必须完成金星改造",
+  "Colonies": "殖民地",
+  "Turmoil": "动荡",
+  "Promo": "Promo卡牌",
+  "Promos": "Promo卡牌",
+
+  "Fan-made": "玩家自制扩展",
+  "MingYue": "明月扩展",
+  "Chemical": "化学扩展",
+  "Ares": "Ares扩展",
   "Extreme": "极限模式",
-  "CEOs": "CEO卡牌",
+  "Community": "社区扩展",
+  "The Moon": "月球扩展",
+  "Mandatory Moon Terraforming": "必须完成月球改造",
+  "Standard Project Variant #1": "标准项目变体#1",
+  "Standard Project Variant #2": "标准项目变体#2",
+  "Agendas": "议会扩展",
+  "Random": "随机",
+  "Chairman": "主席",
+  "Pathfinders": "开拓者扩展",
+  "CEOs": "CEO扩展",
+  "Star Wars (β)": "星球大战扩展(测试版)",
+  "Underworld": "地下世界扩展",
+
+  "Board": "版图",
+  "tharsis": "塔尔西斯高原",
+  "hellas": "希腊平原",
+  "elysium": "埃律西昂平原",
+  "random official": "随机官方地图",
+
+  "utopia planitia": "乌托邦平原",
+  "vastitas borealis novus": "新北方大平原",
+  "terra cimmeria novus": "新辛梅里亚高地",
+  "arabia terra": "阿拉伯高地",
+  "amazonis p.": "亚马逊平原",
+  "t. cimmeria": "辛梅里亚高地",
+  "vastitas borealis": "北方大平原",
+  "random all": "随机所有地图",
+
   "Custom Corporation list": "自定义公司列表",
-  "Custom Preludes list": "自定义前序卡列表",
+  "Custom Preludes list": "自定义前序列表",
   "World Government Terraforming": "世界政府",
   "Draft variant": "轮抽变体",
   "Corporation Draft variant": "公司轮抽变体",
@@ -80,233 +106,6 @@
   "You": "你",
   "you": "你",
   "researching": "研究阶段",
-
-  "Milestones": "里程碑",
-  "Builder": "建设先驱",
-  "Have 8 building tags in play": "拥有8个建筑标志",
-  "Capitalist": "资本家",
-  "Have 64 M€": "拥有64MC",
-  "Colonizer": "殖民者",
-  "Have 4 colonies": "拥有4个殖民地",
-  "T. Collector": "收藏家",
-  "Have 3 sets of automated (green), active (blue) and event (red) project cards in play": "拥有3套绿蓝红卡牌",
-  "Diversifier": "多元化经营者",
-  "Have 8 different tags in play": "拥有8种不同种类的标志",
-  "V. Electrician": "电气技师",
-  "Have 4 power tags in play": "拥有4个电力标志",
-  "Ecologist": "生态专家",
-  "Have 4 bio tags in play (plant, microbe and animal tags count as bio tags)": "拥有4个生态标志(植物、微生物或动物标志)",
-  "Economizer": "节能专家",
-  "Have 5 heat production": "拥有5点热能产量",
-  "Energizer": "发电专家",
-  "Have 6 energy production": "拥有6点电力产量",
-  "Forester": "农民",
-  "Have 4 plant production": "拥有4点植物产量",
-  "Firestarter": "引火者",
-  "Have 20 heat": "拥有20点热能",
-  "Gambler": "赌徒",
-  "Fund 2 awards": "赞助2个奖项",
-  "Gardener": "园丁",
-  "Own 3 greenery tiles": "拥有3个森林板块",
-  "Generalist": "泛用人才",
-  "Have increased all 6 productions by 1 step": "所有六种产能各提升1级",
-  "Hoverlord": "天空霸主",
-  "Have 7 floater resources on your cards": "拥有7个云资源",
-  "Irrigator": "灌溉者",
-  "Own 4 tiles adjacent to oceans": "拥有4个与海洋相邻的板块",
-  "Land Specialist": "土地专家",
-  "Own 3 special (normally, brown) tiles": "拥有3个特殊（通常为棕色）板块",
-  "Legend": "传奇人物",
-  "Have 5 cards in your event pile": "打出过5张事件卡",
-  "Lunarchitect": "月球建筑师",
-  "Own 6 Moon tiles": "拥有6个月球板块",
-  "Martian": "火星人",
-  "Have 4 Mars tags in play": "拥有4个火星标志",
-  "Mayor": "市长",
-  "Own 3 city tiles": "拥有3个城市",
-  "Minimalist": "极简主义者",
-  "Have no more than 2 cards in hand": "手牌不超过2张",
-  "Networker": "网络大亨",
-  "Have placed 3 tiles adjacent to tiles that grant adjacency bonuses": "放置3个获得过相邻收益的板块",
-  "One Giant Step": "人类一大步",
-  "Have 6 moon tags": "拥有6个月球标志",
-  "Pioneer": "先驱者",
-  "Have 3 colonies": "拥有3个殖民地",
-  "Planner": "运筹帷幄",
-  "Have 16 cards in your hand": "拥有16张手牌",
-  "Polar Explorer": "极地探险家",
-  "Own 3 tiles on the two bottom rows": "在地图底部两行拥有3个板块",
-  "Rim Settler": "木星定居者",
-  "Have 3 Jovian tags in play": "拥有3个木星标志",
-  "Smith": "铁匠",
-  "Have a total of 7 steel and titanium production": "需要钢铁和钛产能总和大于7",
-  "Spacefarer": "太空航行者",
-  "Have 6 space tags in play": "拥有6个太空标志",
-  "V. Spacefarer": "金星航行者",
-  "Have 4 space tags in play": "拥有4个太空标志",
-  "Specialist": "专业人士",
-  "Have 10 in production of any resource": "任意一种资源产能达到10点",
-  "Tactician": "战术家",
-  "Have 5 cards with requirements in play": "打出5张有条件限制的牌",
-  "Terraformer": "改造先锋",
-  "Have a terraform rating of 35 (or 26 with Turmoil.)": "拥有35点TR（若使用动荡扩展则为26）",
-  "Terran": "地球居民",
-  "Have 6 Earth tags in play": "拥有6个地球标志",
-  "Terra Pioneer": "改造先驱",
-  "Own 5 tiles on Mars": "在火星上拥有5个板块",
-  "Tradesman": "贸易天才",
-  "Have 3 different types of non-standard resources": "拥有3种非标准资源",
-  "Tropicalist": "热带主义者",
-  "Own 3 tiles in the middle 3 equatorial rows": "在版图中间3排中拥有3个板块.",
-  "Tycoon": "专案大亨",
-  "Have 15 project cards in play (not events.)": "打出15张项目卡",
-  "Tunneler": "隧道工",
-  "Have at least 7 excavation markers": "拥有7个挖掘标记",
-  "Risktaker": "冒险者",
-  "Have at least 3 NEGATIVE VPs among your cards. (Event cards count.)": "拥有3张负分卡牌（包括事件卡）",
-  "Purifier": "净化者",
-  "Have removed at least 3 hazard tiles (excluding WGT)": "移除3个灾害板块（世界政府除外）",
-  "Agronomist": "农学家",
-  "Have 4 plant tags in play": "拥有4个植物标志",
-  "Farmer": "农场主",
-  "Have 5 animal and microbe resources on your cards": "卡牌上有5个动物和微生物资源",
-  "Fundraiser": "筹款人",
-  "Have 12 M€ production": "拥有12 M€产能",
-  "Geologist": "地质学家",
-  "Own 3 tiles ON or ADJACENT to volcanic areas": "在火山区域或其相邻位置拥有3个板块",
-  "Hydrologist": "水文学家",
-  "Have placed 4 oceans.": "已放置4个海洋",
-  "Landshaper": "地形塑造者",
-  "Have 1 city tile, 1 greenery and 1 special tile": "拥有1个城市、1个森林和1个特殊板块",
-  "Lobbyist": "说客",
-  "Having all 7 delegates in parties (Party Leaders and Chairman also count)": "在所有派系中有7个代表（包括党魁和主席）",
-  "Philantropist": "慈善家",
-  "Have 5 cards with non-negative VP": "拥有5张非负分卡牌",
-  "Planetologist": "行星学家",
-  "Have 2 Earth tags, 2 Venus tags, and 2 Jovian tags": "拥有2个地球、2个金星和2个木星标志",
-  "Producer": "生产者",
-  "Have a combined total production of at least 16": "总产能至少为16",
-  "Researcher": "研究员",
-  "Have 4 science tags in play": "拥有4个科学标志",
-  "Sponsor": "赞助商",
-  "Have 3 cards that have cost of 20 M€ or more": "拥有3张费用20 M€或更高的卡牌",
-  "Thawer": "融冰者",
-  "Have raised the temperature 5 steps.": "已提升温度5级",
-  "Engineer": "工程师",
-  "Have a total of 10 energy and heat production": "拥有总共10点电力和热能产能",
-  "Briber": "贿赂者",
-  "To get this milestone, pay 12 M€ in addition to the normal claim cost of 8 M€ (so, 20 M€ in total).": "需额外支付12 M€（总共20 M€）来声明此里程碑",
-  "Merchant": "商人",
-  "Having 2 of each standard resource after paying the claim cost": "支付声明费用后，每种标准资源仍各有2个",
-
-  "Awards": "奖项",
-  "Landlord": "地产大亨",
-  "Own the most tiles": "拥有最多板块",
-  "Banker": "金融巨头",
-  "Have the most M€ production": "拥有最高M€产能",
-  "Scientist": "科技巨擘",
-  "Have the most science tags in play": "拥有最多科学标志",
-  "Thermalist": "热能魁首",
-  "Have the most heat": "拥有最多热能资源",
-  "Miner": "矿业大亨",
-  "Have the most steel and titanium": "拥有最多钢铁和钛资源",
-  "Cultivator": "绿化妙手",
-  "Own the most greenery tiles": "拥有最多绿化板块",
-  "Magnate": "自动化巨头",
-  "Have the most automated (green) project cards in play": "拥有最多自动化（绿色）项目卡",
-  "Space Baron": "太空枭雄",
-  "Have the most space tags in play": "拥有最多太空标志",
-  "Excentric": "特立独行",
-  "Have the most resources on cards in play": "卡牌上拥有最多资源",
-  "Contractor": "营造巨贾",
-  "Have the most building tags in play": "拥有最多建筑标志",
-  "Celebrity": "名媛雅士",
-  "Have the most project cards in play with a base cost of at least 20 M€ (not events.)": "拥有最多基础成本≥20M€的项目卡（非事件）",
-  "Industrialist": "实业家",
-  "Desert Settler": "沙漠定居者",
-  "Own the most tiles south of the equator (the four bottom rows)": "赤道以南拥有最多板块（底部四行）",
-  "Estate Dealer": "海景房",
-  "Own the most tiles adjacent to ocean tiles": "拥有最多与海洋相邻的板块",
-  "Benefactor": "火星改造王",
-  "Have the highest terraform rating": "拥有最高改造度（TR）",
-  "Venuphile": "金星爱好者",
-  "Have the most Venus tags in play": "拥有最多金星标志",
-  "Entrepreneur": "企业家",
-  "Own the most tiles that grant adjacency bonuses": "拥有最多提供相邻加成的板块",
-  "Lunar Magnate": "月球大亨",
-  "Own the most tiles on The Moon": "在月球拥有最多板块",
-  "Full Moon": "满月",
-  "Have the most Moon tags in play": "拥有最多月球标志",
-  "Cosmic Settler": "宇宙移民",
-  "Own the most cities not on Mars": "在非火星区域拥有最多城市",
-  "Botanist": "植物学家",
-  "Have the most plant production": "拥有最高植物产能",
-  "Promoter": "协调员",
-  "Have the most cards in your event pile": "事件牌堆拥有最多卡牌",
-  "Zoologist": "动物学家",
-  "Have the most animal resources": "拥有最多动物资源",
-  "A. Manufacturer": "A类制造商",
-  "Have the most active (blue) project cards in play": "拥有最多主动（蓝色）项目卡",
-  "Curator": "馆长",
-  "Have the most tags of any one type in play": "拥有某一类型的最多标志",
-  "A. Engineer": "A类工程师",
-  "Have the most cards in play that directly alter your own production": "拥有最多直接影响产能的卡牌",
-  "Tourist": "游客",
-  "Have the most empty spaces adjacent to your tiles": "拥有最多相邻空地的板块",
-  "A. Zoologist": "A类动物学家",
-  "Own the most animal and microbe resources": "拥有最多动物和微生物资源",
-  "Biologist": "生物学家",
-  "Have the most animal, plant, and microbe tags in play": "拥有最多动物/植物/微生物标志",
-  "T. Politician": "T类政客",
-  "Place the most delegates": "拥有最多放置的代表数量",
-  "Urbanist": "城市规划师",
-  "Have the most VP from city tile adjacencies on Mars": "通过火星城市相邻获得最多VP",
-  "Warmonger": "战争贩子",
-  "Play the most cards that reduce other players' resources or production": "拥有最多削减其他玩家资源/产能的卡牌",
-  "Forecaster": "适应者",
-  "Have the most cards with requirements in play": "拥有最多有条件限制的卡牌",
-  "Edgedancer": "边缘舞者",
-  "Own the most tiles on the edges of the board": "在版图边缘拥有最多板块",
-  "Visionary": "囤积者",
-  "Have the most cards in hand": "手牌数量最多",
-  "Naturalist": "自然主义者",
-  "Have the most plant and heat production": "拥有最高植物与热能产能总和",
-  "Voyager": "远征者",
-  "Have the most Jovian tags in play": "拥有最多木星标志",
-  "Kingpin": "首脑",
-  "Play the highest number of cards with a corruption requirement of at least 1. (Event cards count)": "拥有最多需要≥1腐败的卡牌（含事件卡）",
-  "EdgeLord": "边缘舞者",
-  "Have the highest number of excavation markers on the edges of the board.": "版图边缘拥有最多挖掘标记",
-  "Rugged": "硬汉",
-  "Have the most tiles adjacent to hazards": "拥有最多与危险区相邻的板块",
-  "Administrator": "行政官",
-  "Have the most cards with no tags": "拥有最多无标志卡牌",
-  "Collector": "收藏家",
-  "Have the most different types of resources, both on your player board and on your cards.": "玩家面板和卡牌上拥有最多种类资源",
-  "Constructor": "建造师",
-  "Have the most Colonies and Cities combined": "殖民地与城市总数最多",
-  "Electrician": "电气技师",
-  "Have the most power tags in play.": "拥有最多电力标志",
-  "Founder": "奠基者",
-  "Have the most tiles adjacent to special tiles.": "拥有最多与特殊板块相邻的板块",
-  "Highlander": "高地人",
-  "Own the most tiles that are NOT adjacent to ocean tiles": "拥有最多不邻接海洋的板块",
-  "Incorporator": "整合者",
-  "Have the most project cards in play with a base cost of at most 10 M€ (not events.)": "拥有最多基础成本≤10M€的项目卡（非事件）",
-  "Investor": "投资者",
-  "Have the most Earth tags in play": "拥有最多地球标志",
-  "Landscaper": "园林师",
-  "Most tiles connected together (each player counts largest group of tiles)": "拥有最大连片区域（计算最大板块群）",
-  "Manufacturer": "制造商",
-  "Have the highest production of steel and heat combined.": "钢铁与热能产能总和最高",
-  "Metropolist": "大都会专家",
-  "Own the most cities": "拥有最多城市",
-  "Mogul": "巨头",
-  "Have the highest production (excluding M€) combined": "总产能最高（M€除外）",
-  "Politician": "政治家",
-  "Have the most party leaders and influence combined.": "派系领袖与影响力总和最高",
-  "Traveller": "旅者",
-  "Have the most Jovian and Earth tags in play combined": "木星与地球标志总数最多",
 
   "Actions": "可执行行动",
   "Hide active cards": "隐藏蓝卡",
@@ -366,7 +165,6 @@
   "Convert 8 heat into temperature": "将8热能转换为温度",
   "Convert heat": "转换热能",
   "Convert ${0} plants into greenery": "将${0}植物转换为森林",
-  "Colonies": "殖民地",
   "funded by": "提供资金者:",
   "claimed by": "宣告达成者:",
   "Error with input": "输入错误",
@@ -427,12 +225,6 @@
 
   "Toggle all": "全部切换",
   "Base": "基础",
-  "Agendas": "议会扩",
-  "Random": "随机",
-  "The Moon": "月亮扩",
-  "Mandatory Moon Terraforming": "必须完成月球改造",
-  "Standard Project Variant #1": "标准项目变体#1",
-  "Standard Project Variant #2": "标准项目变体#2",
   "Drafted cards": "已选择卡牌",
   "Draw 3 cards and keep 2.": "抽3张卡保留2张",
   "Select 2 card(s) to keep": "选择2张卡保留",
@@ -940,7 +732,7 @@
   "Select adjacent player to remove 4 M€ from": "选择相邻玩家移除4 M€",
   "Remove M€": "移除M€",
   "Steal M€": "偷取M€",
-  "Remove credits": "移除信用点",
+  "Remove credits": "移除M€",
   "raise oxygen 1 step": "提升氧气1级",
   "Perform an action from a played card again": "再次执行已打出卡牌的行动",
   "Select amount of heat to spend": "选择要消耗的热能值",
@@ -1086,64 +878,50 @@
 
   "All": "全选",
   "All*": "全选*",
-  "None": "无",
-  "None*": "无*",
-  "Corporate Era": "公司时代",
-  "Randomize board tiles": "随机打乱版图",
-  "Set Predefined Game": "读取未完成游戏",
-  "Ares": "Ares玩家扩",
-  "Fan-made": "玩家自制扩展",
-  "Pathfinders": "开拓者扩展",
-  "Alt. Venus Board": "替代金星版图",
-  "arabia terra": "阿拉伯地",
-  "vastitas borealis": "北方大平原",
-  "terra cimmeria": "基米里地区",
-  "amazonis p.": "亚马逊平原",
-  "utopia planitia": "乌托邦平原",
-  "vastitas borealis novus": "新北方大平原",
-  "terra cimmeria novus": "新基米里地区",
+  "None": "全不选",
+  "None*": "全不选*",
+  "Invert": "反选",
+  "Invert*": "反选*",
+
+  "Randomize board tiles": "随机板块布局",
+  "Set Predefined Game": "预设游戏（固定种子）",
+
   "Escape Velocity": "逃逸速度",
-  "After": "之后",
+  "After": "超过",
   "min": "分钟",
-  "Plus": "加",
-  "seconds per action": "每行动秒数",
+  "Plus": "增加",
+  "seconds per action": "秒/行动",
   "Reduce": "减少",
-  "VP every": "每...VP",
-  "After ${0} min, reduce ${1} VP every ${2} min. (${3} bonus sec. per action.)": "${0}分钟后，每${2}分钟减少${1}VP（每行动奖励${3}秒）",
-  "Exclude some cards": "禁止使用卡牌",
-  "Include some cards": "包含特定卡牌",
-  "Custom Colonies list": "自定义殖民地",
+  "VP every": "VP 每",
+  "After ${0} min, reduce ${1} VP every ${2} min. (${3} bonus sec. per action.)": "${0}分钟后，每${2}分钟减少${1}VP（每次行动额外奖励${3}秒）",
+  "Exclude some cards": "排除部分卡牌",
+  "Include some cards": "包含指定卡牌",
+  "Custom Colonies list": "自定义殖民地列表",
   "Remove negative Global Events": "移除负面动荡事件",
   "Fast mode": "快速模式",
   "Beginner Options": "新手选项",
   "Random Milestones/Awards": "随机里程碑/奖励",
-  "Include new Official Milestones/Awards": "包含新的官方里程碑/奖项",
-  "Limited synergy": "受限协同",
+  "Include new Official Milestones/Awards": "包含官方新增里程碑/奖励",
+  "Limited synergy": "限制协同",
   "Full random": "完全随机",
-  "Mandatory Venus Terraforming": "必须完成金星改造",
-  "63 TR solo mode": "63 TR获胜模式",
+  "63 TR solo mode": "63 TR 单人模式",
   "Cards to exclude from the game": "游戏中禁用的卡牌",
   "Cards to include in the game": "游戏中包含的卡牌",
-  "Start typing the card name to exclude": "输入卡牌名称（英文）",
+  "Start typing the card name to exclude": "输入要排除的卡牌名称（英文）",
   "Start typing the card name to include": "输入要包含的卡牌名称（英文）",
-  "Filter": "游戏过滤器",
-  "TR Boost": "TR先给玩家",
-  "Player ${0} name": "输入玩家${0}名字",
-  "Multiplayer Options": "多人玩家游戏选项",
-  "Community": "社区扩展",
-  "Tags Overview": "标志预览",
-  "Must select at least ${0} corporations": "必须选择至少${0}个公司",
+  "Filter": "过滤器",
+  "TR Boost": "起始TR提升",
+  "Player ${0} name": "玩家${0}姓名",
+  "Multiplayer Options": "多人游戏选项",
+  "Tags Overview": "标志总览",
+  "Must select at least ${0} corporations": "必须至少选择${0}个公司",
   "corporation": "公司",
-  "Hide discount on cards": "隐藏卡牌上的价格折扣。",
-  "Hide sidebar notification": "隐藏边栏提示。",
-  "Learner Mode (req. refresh)": "学习模式（需要刷新）。",
-  "The id of this game is ${0}" : "游戏ID为：${0}",
+  "The id of this game is ${0}" : "本局游戏ID：${0}",
   "Good luck ${0}!" : "祝你好运，${0}！",
-  "Not enough cards selected": "未选择足够数量的卡牌。",
-  "Select how to pay for action": "选择如何为行动支付",
-  "Game Setup Details": "游戏初设详情",
+  "Not enough cards selected": "选择的卡牌数量不足",
+  "Select how to pay for action": "选择行动的支付方式",
+  "Game Setup Details": "游戏设定详情",
 
-  "Turmoil": "动荡",
   "Select an allied party": "选择联盟派系",
   "[Mars First] - Bonus: Gain 1 M€ for each building tag you have - Policy: When you place a tile ON MARS, gain 1 steel": "[火星优先党] 奖励：每个建筑标志获得1 M€ - 政策：在火星放置板块时获得1钢",
   "[Scientists] - Bonus: Gain 1 M€ for each science tag you have - Policy: Pay 10 M€ to draw 3 cards (Turmoil Scientists)": "[科学家党] 奖励：每个科学标志获得1 M€ - 政策：支付10 M€抽取3张卡牌",
@@ -1158,7 +936,7 @@
 
   "Goes First?": "先手玩家？",
 
-  "Claim a milestone": "认领里程碑",
+  "Claim a milestone": "声明里程碑",
   "Build colony": "建立殖民地",
 
   "Place any final greenery from plants": "使用植物放置最终绿化板块",
@@ -1249,8 +1027,6 @@
   "Advanced «": "«返回基础",
   "Names only": "仅显示名称",
   "Full text": "完整文本",
-  "Invert": "反选",
-  "Invert*": "反选*",
   "Colony Tiles": "殖民地板块",
   "Global Events": "全球事件",
   "Sort by ID (work in progress)": "按ID排序（开发中）",
@@ -1258,19 +1034,19 @@
   "automated": "自动",
   "standard_project": "标准项目",
 
-  "megaCredits": "兆信用点",
+  "megaCredits": "M€",
   "steel": "钢铁",
   "titanium": "钛",
   "plants": "植物",
   "energy": "电力",
   "heat": "热能",
-  "MegaCredits [M€]": "兆信用点[M€]",
+  "MegaCredits [M€]": "M€",
   "Steel": "钢铁",
   "Titanium": "钛",
   "Plants": "植物",
   "Energy": "电力",
   "Heat": "热能",
-  "Production count": "产能计数",
+  "Production count": "产能统计",
   "vp": "胜利点数",
   "tr": "改造等级",
   "cards": "卡牌",
