--- a/src/locales/cn/colonies.json
+++ b/src/locales/cn/colonies.json
@@ -8,8 +8,8 @@
   "You start with 45 M€. Increase your M€ production 2 steps. 1 VP per 2 animals on this card.": "起始获得45 M€。提升你的M€产量2级。牌上每2个动物资源1分",
   "Effect: When you play an animal or plant tag, including this, add 1 animal to this card.": "效果：当你打出1个动物标志或植物标志(包括本牌)时，增加1个动物资源到本卡。",
 
-  "POLYPHEMOS": "波呂斐摩斯",
-  "Polyphemos": "波呂斐摩斯",
+  "POLYPHEMOS": "波吕斐摩斯",
+  "Polyphemos": "波吕斐摩斯",
   "You start with 50 M€. Increase your M€ production 5 steps. Gain 5 titanium.": "起始获得50 M€。提升你的M€产量5级,获得5个钛",
   "Effect: When you buy a card to hand, pay 5M€ instead of 3, including the starting hand.": "效果：当你购买手牌时,你需要支付5 M€而非原本的3 M€,包括起始的手牌",
 
@@ -19,7 +19,7 @@
 
   "STORM": "暴风",
   "CRAFT": "舰",
-  "Stormcraft Incorporated": "暴风舰公司",
+  "Stormcraft Incorporated": "暴风舰业",
   "You start with 48 M€.": "起始获得48 M€。",
   "Action: Add a floater to ANY card.": "行动：增加1个云资源到任意卡牌。",
   "Effect: Floaters on this card may be used as 2 heat each.": "效果：本卡上的云资源能当做2个热能资源使用",
@@ -44,7 +44,7 @@
   "Lunar Mining": "月球挖掘",
   "Increase your titanium production 1 step for every 2 Earth tags you have in play, including this.": "每拥有2个地球图标，增加自身1点钛产量包括此卡",
 
-  "Floater Leasing": "漂浮物租贷",
+  "Floater Leasing": "漂浮物租赁",
   "Increase your M€ production 1 step PER 3 floaters you have.": "每有3个云资源，增加自身1点M€产量",
 
   "Martian Zoo": "火星动物园",
@@ -92,7 +92,7 @@
   "Solar Reflectors": "太阳反射器",
   "Increase your heat production 5 steps.": "增加自身5点热能产量",
 
-  "Red Spot Observatory": "红斑实验室",
+  "Red Spot Observatory": "红斑天文台",
   "Action: Add 1 floater to this card, or spend 1 floater here to draw a card.": "行动：增加一点云资源到此卡，或者消耗1点此卡的云资源来抽1张卡",
   "Draw 2 cards.": "抽2张牌",
 
@@ -116,7 +116,7 @@
   "STEAL": "偷窃",
   "Requires that you lose 1 floater. Steal 5 M€ from any player.": "失去1个云资源。从任意玩家处偷5块钱。",
 
-  "Atmo Collectors": "大气收藏家",
+  "Atmo Collectors": "大气收集器",
   "Action: Add one floater here.": "行动：在此牌上增加1个云资源",
   "Action: Spend 1 floater here to gain 2 titanium, or 3 energy, or 4 heat.": "行动：花费此牌上一个云资源获得2个钛资源、或3个电力资源、或4个热力资源。",
   "Add 2 floaters to ANY card.": "在任意卡牌上增加2个云资源。",
@@ -190,7 +190,6 @@
   "Sub-zero Salt Fish": "零下咸鱼",
   "Requires -6 C. Decrease any plant production 1 step.": "需求：-6℃。任何植物产量-1。",
 
-  "Titan Floating Launch-Pad": "土卫六漂浮发射台",
   "Colony City": "殖民地城市",
   "Warp Drive": "曲率引擎",
   "Effect: When you play a space card, you pay 4 M€ less for it.": "效果：当你打出1张太空牌时，少支付4块钱。",
