--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -1,26 +1,26 @@
 {
   "Project Reorganization": "项目重整",
-  "(Action: Spend 2 energy to look at the top 4 cards of the discard pile. Keep 1 and return the rest in order.)": "（行动：花费2个电力资源，观看弃牌顶的4张牌并保留其中1张牌，然后将其余牌按原顺序放回弃牌堆顶。）",
+  "Action: Spend 2 energy to look at the top 4 cards of the discard pile. Keep 1 and return the rest in order.": "行动：花费2个电力资源，观看弃牌顶的4张牌并保留其中1张牌，然后将其余牌按原顺序放回弃牌堆顶。",
 
   "Asteroid Material Research Center": "小行星物质研究中心",
-  "(Effect: When your blue card gains an asteroid resource, refresh its action (max 2 times per generation per card))": "（效果：当你的蓝卡获得小行星资源后，刷新其行动次数（每时代每卡最多2次））",
-  "(Effect: When you play an event card with \"asteroid\" in its name, add 1 asteroid resource to any card)": "（效果：当你打出名字带有“小行星（asteroid）”的事件牌时，向任意卡牌添加1个小行星资源）",
+  "Effect: When your blue card gains an asteroid resource, refresh its action (max 2 times per generation per card)": "效果：当你的蓝卡获得小行星资源后，刷新其行动次数（每时代每卡最多2次）",
+  "Effect: When you play an event card with \"asteroid\" in its name, add 1 asteroid resource to any card": "效果：当你打出名字带有“小行星（asteroid）”的事件牌时，向任意卡牌添加1个小行星资源",
 
   "Resource Planning Bureau": "资源规划局",
   "pay": "支付",
-  "(Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.)": "（效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。）",
+  "Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.": "效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。",
 
   "Space Wedding": "太空婚礼",
   "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。",
 
   "Infinite Monkey Theorem": "无限猴子定理",
-  "(Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 animal here.)": "（行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个动物资源。）",
+  "Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 animal here.": "行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个动物资源。",
   "Then gain 1M€ per animal here.": "然后你获得等同于此卡上动物数量的 M€。",
   "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。",
 
   "Floral Bloom Surge": "卉植繁茂",
   "Requires 2 plant tags.": "需要2个植物标志。",
-  "(Effect: When you play a plant tag card (including this), increase your plant production by 1.)": "（效果：当你打出一张植物志牌时（包括此牌）时，提升1点植物产能。）",
+  "Effect: When you play a plant tag card (including this), increase your plant production by 1.": "效果：当你打出一张植物志牌时（包括此牌）时，提升1点植物产能。",
 
   "Ecological Pavilion": "生态展馆",
   "Requires a plant tag, a microbe tag, and an animal tag. Draw 2 cards.": "需要拥有植物、微生物和动物标志。抽2张牌。",
@@ -38,7 +38,7 @@
 
   "Divergencies Assort": "分歧的交汇点",
   "Requires 2 science tags.": "需要2个科学标志。",
-  "(Action: Draw the top 2 cards of the deck. Keep at most 1 of them.)": "（行动：抽取牌堆顶两张牌，保留其中至多一张。）",
+  "Action: Draw the top 2 cards of the deck. Keep at most 1 of them.": "行动：抽取牌堆顶两张牌，保留其中至多一张。",
   "If you kept any, all other players draw 1 card.": "若你保留了卡牌，其余所有玩家各抽 1 张牌",
   "Select 1 card to keep or none": "选择保留 1 张牌或不保留",
   "${0} kept a card during the action of ${1}.": "${0} 在 ${1} 的行动中保留了一张牌",
