--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -1,13 +1,13 @@
 {
   "You start with 48 M€.": "起始获得48M€。",
-  "(Effect: After you play a project card, if this completes a new set of red, green, and blue project cards, draw 1 card.)": "（效果：当你打出项目卡后，若因此新凑齐一套红/绿/蓝项目卡，抽1张牌。）",
-  "(Action: Reveal and discard 2 cards to draw 1 card of a color not among the discarded ones.)": "（行动：展示并弃置2张牌，抽1张未被弃置颜色的牌。）",
+  "Effect: After you play a project card, if this completes a new set of red, green, and blue project cards, draw 1 card.": "效果：当你打出项目卡后，若因此新凑齐一套红/绿/蓝项目卡，抽1张牌。",
+  "Action: Reveal and discard 2 cards from your hand, then draw 1 card of a color not present among the discarded cards.": "行动：从你的手牌中展示并弃置2张牌，然后抽1张颜色不同于弃置牌的牌。",
   "${0} collected ${1} red-green-blue sets, drew 1 card due to ${2} effect.": "${0} 收集了 ${1} 套红绿蓝，因 ${2} 效果摸了 1 张牌。",
   "${0}'s red-green-blue set count decreased to ${1}.": "${0} 的红绿蓝套数减少到了 ${1}。",
 
   "Luna Chain": "连月",
-  "(Effect: When the actual paid M€ of your current and previous project cards differ by X (X < 3), gain (3 - X) M€.)": "（效果：当你打出的项目卡实际支付的M€与上一张项目卡相差X(X<3)时，你获得(3-X)M€。）",
-  "${0} gained ${1} M€ due to ${2} effect.": " ${0} 因 ${2} 效果，获得了 ${1} M€。",
+  "Effect: After you play a project card, if the final M€ paid differs from the previous card by X (absolute value and X ≤ 2), gain (3 - X) M€.": "效果：当你打出项目卡后，若其最终支付的M€与上一张卡的差额为X（取绝对值且X ≤ 2），则获得(3-X) M€。",
+  "${0} gained ${1} M€ due to ${2} effect.": "${0} 因 ${2} 效果，获得了 ${1} M€。",
   "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain God 🌙)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月之神 🌙)",
   "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain Baker 🍰)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月糕手 🍰)",
   "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain Champion 💪)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月强者 💪)",
@@ -16,8 +16,8 @@
 
   "Tithes": "什一税",
   "TITHES": "什一税",
-  "(Action: Each other player loses 10% (rounded down) of their M€. You gain the total amount lost.)": "（行动：每个其他玩家失去其10%(向下取整)的M€，你获得这些失去的M€。）",
-  "(Each other player who loses 3 M€ or more due to this action draws 1 card.)": "（每个因这一行动损失3 M€或更多的其他玩家将抽1张牌。)",
+  "Action: Each other player loses 10% (rounded down) of their M€. You gain the total amount lost.": "行动：每个其他玩家失去其10%(向下取整)的M€，你获得这些失去的M€。",
+  "(Each other player who loses 3 M€ or more due to this action draws 1 card.)": "（每个因这一行动损失3 M€或更多的其他玩家将抽1张牌。）",
   "${0} paid ${1} M€ in ${2} and draws 1 card.": "${0} 在 ${2} 中支付了 ${1} M€ 并抽了1张牌。",
   "${0} paid ${1} M€ in ${2}.": "${0} 在 ${2} 中支付了 ${1} M€。",
   "${0} collected a total of ${1} M€ via ${2}.": "${0} 通过 ${2} 共计获得了 ${1} M€。",
@@ -30,7 +30,7 @@
   "α World Line": "α世界线",
   "β World Line": "β世界线",
   "α World Line ⇄ β World Line": "α世界线 ⇄ β世界线",
-  "(Effect: At the end of each turn, you jump to another World Line (in the first turn, you start in the β World Line).)": "（效果：每回合结束时，你跳跃至另一条世界线（首回合你处于β世界线）。）",
+  "Effect: At the end of each turn, you jump to another World Line (in the first turn, you start in the β World Line).": "效果：每回合结束时，你跳跃至另一条世界线（首回合你处于β世界线）。",
   "α World Line: Base actions per turn are 1, project card costs are reduced by 3 M€.": "α世界线：基础行动次数为1，项目卡费用减少3 M€。",
   "β World Line: Base actions per turn are 3, project card costs are increased by 1 M€.": "β世界线：基础行动次数为3，项目卡费用增加1 M€。",
   "${0}'s ${1} has jumped to the β World Line. You can take 3 actions next turn.": "${0} 的 ${1} 已跳跃到 β 世界线，下回合可进行 3 次行动。",
