feat(FlowingCloud): 调整“流云”公司行动为移动至多一半的云
将“流云”公司的行动逻辑进行如下修改：
- 原逻辑：移动任意数量的云。
- 新逻辑：移动来源卡牌上至多一半的云（向下取整）。

同时，增加了来源卡牌必须至少拥有2个云才能执行此行动的限制，并同步更新了卡牌的行动描述文本及其中文翻译。

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -81,7 +81,7 @@
   "Flowing Cloud": "流云",
   "FLOWING CLOUD": "流云",
   "You start with 48 M€. As your first action, draw a floater card.": "起始获得48M€。作为第一个行动，抽一张云载体牌。",
-  "Action: Move any number of floater resources from one floater card to another.": "行动：将任意数量的云从一张云载体牌移动到另一张云载体牌上。",
+  "Action: Move up to half of the floater resources from one floater card to another.": "行动：将至多一半的云从一张云载体牌移动到另一张云载体牌上。",
   "If the two cards have the same number of floater resources after moving, place 1 floater resource on each of these two cards.": "如果移动后两张牌上的云数量相同，则在这两张牌上各放置1个云。",
   "equal": "相等",
 
