--- a/src/locales/cn/promo_corporations.json
+++ b/src/locales/cn/promo_corporations.json
@@ -6,7 +6,7 @@
 
   "Astrodrill": "天体钻井",
   "You start with 35 M€ and 3 asteroid resources.": "起始获得35M€和3个小行星资源。",
-  "Action: Add an asteroid resource to ANY card OR gain any standard resource, OR remove an asteroid resource from this card to gain 3 titanium.": "行动：选择在任意卡牌添加1个小行星资源并获得1个标准资源，或移除此卡1个小行星资源获得3个钛。",
+  "Action: Add an asteroid resource to ANY card OR gain any standard resource, OR remove an asteroid resource from this card to gain 3 titanium.": "行动：在任意卡牌上添加1个小行星资源，或获得1个任意标准资源；或移除此卡上的1个小行星资源并获得3个钛。",
 
   "FACTORUM": "FACTORUM",
   "You start with 37 M€. Increase your steel production 1 step.": "起始获得37M€。提升1点钢铁产能。",
