refactor(card): 重构无限猴子定理，使用打字机资源并优化逻辑
本次提交对“无限猴子定理”卡牌进行了根本性的设计重构和代码优化。

**1. 核心设计重构：用独立的“打字机”资源替换“猴子”资源**

此项改动旨在彻底解决一个历史遗留的设计问题。

*   **问题演进历程:**
    1.  **最初设想:** 希望此卡牌使用标准的“动物”资源，以符合主题。
    2.  **平衡性难题:** 开放使用动物资源后，发现其他卡牌可以轻易地向此卡添加大量资源，导致其强度失控，无法平衡。
    3.  **旧的解决方案 (一个复杂的折衷):**
        - 为了阻止外部卡牌添加资源，我们创造了一个全新的 `MONKEY` 资源类型。
        - 但为了在视觉和主题上保留关联，`MONKEY` 资源被故意设计为使用和 `ANIMAL` 资源完全相同的图标。
        - 更复杂的是，为了让 `MONKEY` 仍然能与部分卡牌（如 `Meat Industry`, `Arklight`）产生期望的联动，我们不得不在这些卡牌的代码中**硬编码了对 `MONKEY` 资源的特殊识别逻辑** (`... || card.resourceType === CardResource.MONKEY`)。

*   **这种折衷方案的弊端:**
    - **逻辑丑陋:** 导致 `Meat Industry` 等卡牌的逻辑不再纯粹，包含了对另一张不相关卡牌的特殊处理。
    - **高维护成本:** 未来任何与动物资源相关的卡牌，都需要开发者记得去检查是否要加入对 `MONKEY` 的特殊判断，非常脆弱且容易出错。
    - **玩家困惑:** 视觉上是动物，但机制上大部分情况又不是，容易引起玩家理解混乱。

*   **本次提交的解决方案:**
    通过引入一个全新的、在视觉和机制上都完全独立的**“打字机”**资源，我们彻底废除了上述复杂的折衷方案。这带来了：
    - **清晰解耦:** `Meat Industry` 等卡牌的逻辑恢复纯粹，不再需要特殊识别，彻底移除了“代码坏味道”。
    - **设计明确:** 卡牌的效果变得独立、自洽，不再有隐藏的联动规则和视觉误导。
    - **易于平衡:** 卡牌的收益自成一体，平衡性变得可控。

**2. 代码逻辑优化:**

在解决核心设计问题的同时，对 `bespokeAction` 方法的实现也进行了优化，在保持与游戏快照机制兼容（无状态计算）的前提下：
- **提升了效率和可读性:** 通过 `flatMap` 和 `Set` 的组合，一次性构建了所有旧标签的查找表，避免了嵌套循环。

总而言之，本次提交是一次彻底的技术债清理，用一个清晰、健壮的设计替换了过去复杂且不可持续的临时方案。

--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -14,9 +14,8 @@
   "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。",
 
   "Infinite Monkey Theorem": "无限猴子定理",
-  "Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 animal here.": "行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个动物资源。",
-  "Then gain 1M€ per animal here.": "然后你获得等同于此卡上动物数量的 M€。",
-  "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。",
+  "Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 typewriter here.": "行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个打字机资源。",
+  "Then gain 1M€ per typewriter here.": "然后你获得等同于此卡上打字机数量的 M€。",
 
   "Floral Bloom Surge": "卉植繁茂",
   "Requires 2 plant tags.": "需要2个植物标志。",
