feat(DataCommunicationCenter): 优化数据中心卡牌逻辑，支持电力产能变化和消耗电力时获取数据
- 将电力产能变动的数据获取逻辑从仅提升时触发，修改为电力产能发生任何变化（提升或下降）时均可触发。
- 调整卡牌描述以匹配新的数据获取机制。
- 确保消耗电力资源时仍可正常获取数据。

这一改动使得数据中心卡牌在游戏中的触发条件更加灵活和强大。

--- a/src/locales/cn/mingyue_corporations.json
+++ b/src/locales/cn/mingyue_corporations.json
@@ -100,6 +100,6 @@
   "Data Communication Center": "数据流通中心",
   "DATA COMMUNICATION CENTER": "数据流通中心",
   "You start with 42 M€ and 3 energy.": "起始获得42M€和3个电力资源。",
-  "Effect: Whenever your energy production increases or you spend energy, add 1 data to this card.": "效果：每当你的电力产量增加或你消耗电力时，在此卡上放置1个数据。",
+  "Effect: Whenever your energy production changes (increases or decreases) or you spend energy, add 1 data to this card.": "效果：每当你的电力产量变化（增加或减少）或你消耗电力时，在此卡上放置1个数据。",
   "Effect: Whenever this card has at least 3 data, automatically remove 3 data to draw 1 card.": "效果：当此卡上至少有3个数据时，自动移除3个数据以抽1张牌。"
 }
