balance: 平衡性调整
- Trisyn Institute (三元学院) 起始资金从 48M€ 调整到 45M€。
- Celestic (原版) 回退到修改前的状态。
- CelesticRebalanced（重制版）重写代码，避免继承原版。起始资金 42M€，第一个行动改为抽一张云载体牌。
- Stormcraft Incorporated（重制版）起始资金从 48M€ 调整到 45M€，并增加第一个行动：抽一张云载体牌。
- DataCenter (数据中心) 增加火星标签，费用从 9M€ 调整到 10M€。
- MARS_MONUMENT (火星纪念碑) 增加火星标签。
- 相应更新了中文描述文件。

--- a/src/locales/cn/rebalanced_corporations.json
+++ b/src/locales/cn/rebalanced_corporations.json
@@ -28,6 +28,7 @@
   "CELESTIC_REBALANCED": "CELESTIC",
   "Celestic Rebalanced": "Celestic",
   "CELESTIC REBALANCED": "CELESTIC",
+  "You start with 42 M€. As your first action, draw a floater card.": "起始获得42M€。作为第一个行动，抽一张云载体牌。",
   "Effect: When you gain an floater to ANY CARD, gain 1 M€.": "效果：当你在任意卡上增加1个云资源时，获得1M€。",
 
   "SolBank_Rebalanced": "SolBank",
@@ -126,6 +127,7 @@
   "STORMCRAFT_INCORPORATED_REBALANCED": "STORMCRAFT_INCORPORATED",
   "Stormcraft Incorporated Rebalanced": "Stormcraft Incorporated",
   "STORMCRAFT INCORPORATED REBALANCED": "STORMCRAFT INCORPORATED",
+  "You start with 45 M€. As your first action, draw a floater card.": "起始获得45M€。作为第一个行动，抽一张云载体牌。",
   "Action: Add a floater each to 1 or 2 different cards.": "行动：在1或2张不同的卡牌上各放置1个云资源。",
   "Select 2 cards to place 1 floater on each": "选择 2 张卡牌，各放置 1 个云资源",
   "Place": "放置"
