feat: 集成 TMEnhancement 模块并添加偏好设置开关
本次提交将 `TMEnhancement`（火星改造增强助手）模块正式集成到游戏的主组件中，并通过偏好设置提供了一个开关，允许玩家按需启用或禁用此功能。

主要变更包括：

1.  **功能集成**:
    *   在 `PlayerHome.vue` 组件中，引入了 `TMEnhancement` 模块。
    *   实现了一个健壮的单例管理模式：`TMEnhancement` 实例在整个应用生命周期中只创建一次。
    *   利用 `mounted` 钩子，根据用户的偏好设置来启动 (`start`)、重新附加 (`reattach`) 或销毁 (`destroy`) 助手模块，确保了在页面刷新和组件重载时功能的稳定性和资源的正确管理。

2.  **添加偏好设置**:
    *   在 `PreferencesManager.ts` 中，为 `Preferences` 类型新增了 `quick_actions` 布尔字段。
    *   在 `PreferencesDialog.vue` 中，添加了对应的 UI 开关，允许玩家在设置中启用或禁用“快速操作”功能。

3.  **本地化**:
    *   在 `cn/preferences.json` 中，添加了“快速操作（需刷新生效）”的中文翻译。

此次集成使得强大的 UI 增强功能可以作为一项可选特性提供给玩家，提升了应用的灵活性和用户体验。

--- a/src/locales/cn/preferences.json
+++ b/src/locales/cn/preferences.json
@@ -27,5 +27,6 @@
   "Learner Mode (req. refresh)": "学习模式（需刷新生效）",
   "Symbol Overlay": "符号覆盖",
   "Experimental UI": "实验性UI",
-  "Debug View": "调试视图"
+  "Debug View": "调试视图",
+  "Quick Actions (req. refresh)": "快速操作（需刷新生效）"
 }
