docs(i18n): 优化月球扩中文翻译

--- a/src/locales/cn/standard_projects.json
+++ b/src/locales/cn/standard_projects.json
@@ -24,24 +24,24 @@
   "Spend 7 M€ (steel may be used) to excavate a space.": "花费7 M€（可用钢材）来开挖一个空间。",
 
   "Build Moon Colony": "建造月球殖民地",
-  "Lunar Habitat": "月球居所",
-  "Lunar Habitat (var. 1)": "月球居所（变体1）",
-  "Lunar Habitat (var. 2)": "月球居所（变体2）",
-  "Spend 22 M€ and 1 titanium to place a habitat on The Moon and raise your M€ production 1 step.": "花费22 M€和1钛来在月球上放置一个居所，并提高你的M€产量1级。",
-  "Spend 23 M€ (titanium may be used) AND 1 titanium to place a habitat on The Moon and raise your M€ production 1 step.": "花费23 M€（可用钛）并消耗1钛来在月球上放置一个居所，并提高你的M€产量1级。",
-  "Spend 26 M€ to place a habitat on The Moon and raise your M€ production 1 step.": "花费26 M€来在月球上放置一个居所，并提高你的M€产量1级。",
-  "Build Moon Mine": "建造月球矿场",
-  "Lunar Mine": "月球矿场",
-  "Lunar Mine (var. 1)": "月球矿场（变体1）",
-  "Lunar Mine (var. 2)": "月球矿场（变体2）",
-  "Spend 20 M€ and 1 titanium to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费20 M€和1钛在月球上放置一个矿场，提升采矿率1级，并提升钢材产量1级。",
-  "Spend 21 M€ (titanium may be used) AND 1 titanium to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费21 M€（可用钛）并消耗1钛，在月球上放置一个矿场，提升采矿率1级，并提升钢材产量1级。",
-  "Spend 23 M€ to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费23 M€来在月球上放置一个矿场，提升采矿率1级，并提升钢材产量1级。",
-  "Build Moon Road": "建造月球道路",
-  "Road Infrastructure": "道路基础设施",
-  "Road Infrastructure (var. 1)": "道路基础设施（变体1）",
-  "Road Infrastructure (var. 2)": "道路基础设施（变体2）",
-  "Spend 18 M€ and 1 steel to place a road on The Moon and raise the Logistics Rate 1 step.": "花费18 M€和1钢材，在月球上放置一条道路，并提升物流等级1级。",
-  "Spend 19 M€ (steel may be used) AND 1 steel to place a road on The Moon and raise the Logistics Rate 1 step.": "花费19 M€（可用钢材）并消耗1钢材，在月球上放置一条道路，并提升物流等级1级。",
-  "Spend 21 M€ to place a road on The Moon and raise the Logistics Rate 1 step.": "花费21 M€来在月球上放置一条道路，并提升物流等级1级。"
+  "Lunar Habitat": "月球栖息地",
+  "Lunar Habitat (var. 1)": "月球栖息地（变体1）",
+  "Lunar Habitat (var. 2)": "月球栖息地（变体2）",
+  "Spend 22 M€ and 1 titanium to place a habitat on The Moon and raise your M€ production 1 step.": "花费22M€和1钛来在月球上放置一个栖息地并提高你的M€产量1级。",
+  "Spend 23 M€ (titanium may be used) AND 1 titanium to place a habitat on The Moon and raise your M€ production 1 step.": "花费23 M€（可用钛支付）并消耗1钛来在月球上放置一个栖息地并提高你的M€产量1级。",
+  "Spend 26 M€ to place a habitat on The Moon and raise your M€ production 1 step.": "花费26 M€来在月球上放置一个栖息地并提高你的M€产量1级。",
+  "Build Moon Mine": "建造月球矿",
+  "Lunar Mine": "月球矿",
+  "Lunar Mine (var. 1)": "月球矿（变体1）",
+  "Lunar Mine (var. 2)": "月球矿（变体2）",
+  "Spend 20 M€ and 1 titanium to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费20 M€和1钛在月球上放置一个矿并提高采矿速率1级然后提高钢产量1级。",
+  "Spend 21 M€ (titanium may be used) AND 1 titanium to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费21 M€（可用钛支付）并消耗1钛，在月球上放置一个矿并提高采矿速率1级然后提高钢产量1级。",
+  "Spend 23 M€ to place a mine on The Moon, raise the mining rate 1 step, and raise steel production 1 step.": "花费23 M€来在月球上放一个矿并提升采矿速率1级然后提高钢产量1级。",
+  "Build Moon Road": "建造月球路",
+  "Road Infrastructure": "道路基建",
+  "Road Infrastructure (var. 1)": "道路基建（变体1）",
+  "Road Infrastructure (var. 2)": "道路基建（变体2）",
+  "Spend 18 M€ and 1 steel to place a road on The Moon and raise the Logistics Rate 1 step.": "花费18 M€和1钢材，在月球上放置一块路板块并提升物流速率1级。",
+  "Spend 19 M€ (steel may be used) AND 1 steel to place a road on The Moon and raise the Logistics Rate 1 step.": "花费19 M€（可用钢支付）并消耗1钢材，在月球上放置一条道路并提升物流速率1级。",
+  "Spend 21 M€ to place a road on The Moon and raise the Logistics Rate 1 step.": "花费21 M€来在月球上放置一块路板块，并提升物流速率1级。"
 }
